boton nueva categoria

--- a/client/src/app/category/category-list/category-list.component.html
+++ b/client/src/app/category/category-list/category-list.component.html
@@ -25,6 +25,6 @@
     </mat-table>
 
     <div class="buttons">
-        <button mat-flat-button color="primary">Nueva categoría</button>
+        <button mat-flat-button color="primary" (click)="createCategory()">Nueva categoría</button>
     </div>   
 </div>
