--- a/client/src/app/core/header/header.component.html
+++ b/client/src/app/core/header/header.component.html
@@ -20,6 +20,9 @@
                 <div class="header_button">
                     <a routerLink="/clients" routerLinkActive="active">Clientes</a>
                 </div>
+                <div class="header_button">
+                    <a routerLink="/rents" routerLinkActive="active">Préstamos</a>
+                </div>
             </div>
 
             <div class="header_login">
