--- a/client/src/app/rent/rent-list/rent-list.component.html
+++ b/client/src/app/rent/rent-list/rent-list.component.html
@@ -30,10 +30,10 @@
         <ng-container matColumnDef="action">
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
             <mat-cell *matCellDef="let element">
-                <button mat-icon-button color="primary" (click)="editAuthor(element)">
+                <button mat-icon-button color="primary" (click)="editRent(element)">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-icon-button color="accent" (click)="deleteAuthor(element)">
+                <button mat-icon-button color="accent" (click)="deleteRent(element)">
                     <mat-icon>clear</mat-icon>
                 </button>
             </mat-cell>
