--- a/client/src/app/rent/rent-list/rent-list.component.html
+++ b/client/src/app/rent/rent-list/rent-list.component.html
@@ -1,6 +1,34 @@
 <div class="container">
     <h1>Listado de Préstamos</h1>
 
+    <div class="filters">
+        <form>
+            <mat-form-field>
+                <mat-label>Título del juego</mat-label>
+                <mat-select disableRipple [(ngModel)]="filterGame" name="game">
+                    @for (game of games; track game.id) {
+                        <mat-option [value]="game">{{ game.title }}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Cliente</mat-label>
+                <mat-select disableRipple [(ngModel)]="filterClient" name="client">
+                    @for (client of clients; track client.id) {
+                        <mat-option [value]="client">{{ client.name }}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+        </form>
+
+        <div class="buttons">
+            <button mat-stroked-button (click)="onCleanFilter()">Limpiar</button>
+            <button mat-stroked-button (click)="onSearch()">Filtrar</button>
+        </div>
+    </div>
+
+
     <mat-table [dataSource]="dataSource"> 
         <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef> Identificador </mat-header-cell>
