--- a/client/src/app/rent/rent-list/rent-list.component.scss
+++ b/client/src/app/rent/rent-list/rent-list.component.scss
@@ -1,6 +1,24 @@
 .container {
     margin: 20px;
 
+    .filters {
+        display: flex;
+
+        mat-form-field {
+            width: 300px;
+            margin-right: 20px;
+        }
+
+        .buttons {
+            flex: auto;
+            align-self: center;
+
+            button {
+                margin-left: 15px;
+            }
+        }
+    }
+
     mat-table {
         margin-top: 10px;
         margin-bottom: 20px;
