--- a/client/src/app/rent/rent-list/rent-list.component.html
+++ b/client/src/app/rent/rent-list/rent-list.component.html
@@ -20,6 +20,13 @@
                     }
                 </mat-select>
             </mat-form-field>
+
+            <mat-form-field>
+                <mat-label>Fecha</mat-label>
+                <input matInput [matDatepicker]="datePicker" [(ngModel)]="filterDate" name="date">
+                <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+                <mat-datepicker #datePicker></mat-datepicker>
+            </mat-form-field>
         </form>
 
         <div class="buttons">
