--- a/client/src/app/client/client-edit/client-edit.component.html
+++ b/client/src/app/client/client-edit/client-edit.component.html
@@ -5,7 +5,7 @@
         <h1>Crear cliente</h1>
     }
 
-    <form>
+    <form #clientForm="ngForm">
         <mat-form-field>
             <mat-label>Identificador</mat-label>
             <input type="text" matInput placeholder="Identificador" [(ngModel)]="client.id" name="id" disabled>
@@ -20,6 +20,6 @@
 
     <div class="buttons">
         <button mat-stroked-button (click)="onClose()">Cerrar</button>
-        <button mat-flat-button color="primary" (click)="onSave()">Guardar</button>
+        <button mat-flat-button color="primary" (click)="onSave()" [disabled]="clientForm.invalid">Guardar</button>
     </div>
 </div>
