--- a/client/src/app/game/game-edit/game-edit.component.html
+++ b/client/src/app/game/game-edit/game-edit.component.html
@@ -5,7 +5,7 @@
         <h1>Crear juego</h1>
     }
 
-    <form>
+    <form #gameForm="ngForm">
         <mat-form-field>
             <mat-label>Identificador</mat-label>
             <input type="text" matInput placeholder="Identificador" [(ngModel)]="game.id" name="id" disabled>
@@ -46,6 +46,6 @@
 
     <div class="buttons">
         <button mat-stroked-button (click)="onClose()">Cerrar</button>
-        <button mat-flat-button color="primary" (click)="onSave()">Guardar</button>
+        <button mat-flat-button color="primary" (click)="onSave()" [disabled]="gameForm.invalid">Guardar</button>
     </div>
 </div>
