--- a/client/src/app/rent/rent-edit/rent-edit.component.html
+++ b/client/src/app/rent/rent-edit/rent-edit.component.html
@@ -5,7 +5,7 @@
         <h1>Crear préstamo</h1>
     }
 
-    <form>
+    <form #rentForm="ngForm">
         <mat-form-field>
             <mat-label>Identificador</mat-label>
             <input type="text" matInput placeholder="Identificador" [(ngModel)]="rent.id" name="id" disabled>
@@ -50,6 +50,6 @@
 
     <div class="buttons">
         <button mat-stroked-button (click)="onClose()">Cerrar</button>
-        <button mat-flat-button color="primary" (click)="onSave()">Guardar</button>
+        <button mat-flat-button color="primary" (click)="onSave()" [disabled]="rentForm.invalid">Guardar</button>
     </div>
 </div>
