--- a/client/src/app/category/category-edit/category-edit.component.html
+++ b/client/src/app/category/category-edit/category-edit.component.html
@@ -13,7 +13,7 @@
 
         <mat-form-field>
             <mat-label>Nombre</mat-label>
-            <input type="text" matInput placeholder="Nombre de categoría" [(ngModel)]="category.name" name="name" required>
+            <input type="text" matInput placeholder="Nombre de categoría" [(ngModel)]="category.name" name="name" required appNoWhitespace>
             <mat-error>El nombre no puede estar vacío</mat-error>
         </mat-form-field>
     </form>
