--- a/client/src/app/game/game-edit/game-edit.component.html
+++ b/client/src/app/game/game-edit/game-edit.component.html
@@ -13,13 +13,13 @@
 
         <mat-form-field>
             <mat-label>Título</mat-label>
-            <input type="text" matInput placeholder="Título del juego" [(ngModel)]="game.title" name="title" required>
+            <input type="text" matInput placeholder="Título del juego" [(ngModel)]="game.title" name="title" required appNoWhitespace>
             <mat-error>El título no puede estar vacío</mat-error>
         </mat-form-field>
 
         <mat-form-field>
             <mat-label>Edad recomendada</mat-label>
-            <input type="number" matInput placeholder="Edad recomendada" [(ngModel)]="game.age" name="age" required>
+            <input type="number" matInput placeholder="Edad recomendada" [(ngModel)]="game.age" name="age" required appNoWhitespace>
             <mat-error>La edad no puede estar vacía</mat-error>
         </mat-form-field>
 
