--- a/client/src/app/game/game-edit/game-edit.component.html
+++ b/client/src/app/game/game-edit/game-edit.component.html
@@ -19,8 +19,8 @@
 
         <mat-form-field>
             <mat-label>Edad recomendada</mat-label>
-            <input type="number" matInput placeholder="Edad recomendada" [(ngModel)]="game.age" name="age" required appNoWhitespace>
-            <mat-error>La edad no puede estar vacía</mat-error>
+            <input type="number" matInput placeholder="Edad recomendada" [(ngModel)]="game.age" name="age" required min="0">
+            <mat-error>La edad no puede estar vacía ni ser negativa</mat-error>
         </mat-form-field>
 
         <mat-form-field>
